Add datamodel and REST API for making tag-sharing invite-based
